--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx index.ts",
-    "custom": "tsx custom.ts",
-    "postinstall": "playwright install"
+    "custom": "tsx main-2.ts",
+    "postinstall": "playwright install",
+    "serve": "tsx watch server.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.3",
     "@browserbasehq/sdk": "2.3.0",
     "@browserbasehq/stagehand": "1.14.0",
+    "@hono/node-server": "^1.13.8",
     "@playwright/test": "^1.49.1",
     "ai": "^4.1.57",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.7",
+    "hono": "^4.7.5",
     "puppeteer": "^24.4.0",
     "zod": "^3.24.2"
   },
