--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.3",
+    "@ai-sdk/perplexity": "^1.1.0",
     "@browserbasehq/sdk": "2.3.0",
     "@browserbasehq/stagehand": "1.14.0",
     "@hono/node-server": "^1.13.8",
     "@playwright/test": "^1.49.1",
-    "ai": "^4.1.57",
+    "ai": "^4.2.0",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.7",
