--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "hono": "^4.7.5",
+    "pg": "^8.14.1",
     "puppeteer": "^24.4.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.11",
     "tsx": "^4.19.2",
     "typescript": "^5.0.0"
   }
