--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "tsx watch server.ts"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.5",
     "@ai-sdk/openai": "^1.2.3",
     "@ai-sdk/perplexity": "^1.1.0",
     "@browserbasehq/sdk": "2.3.0",
@@ -16,13 +17,17 @@
     "@hono/node-server": "^1.13.8",
     "@playwright/test": "^1.49.1",
     "ai": "^4.2.0",
+    "any-date-parser": "^2.0.3",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "hono": "^4.7.5",
+    "js-tiktoken": "^1.0.19",
     "pg": "^8.14.1",
     "puppeteer": "^24.4.0",
+    "tiktoken": "^1.0.20",
     "zod": "^3.24.2"
   },
   "devDependencies": {
