--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@browserbasehq/sdk": "2.3.0",
     "@browserbasehq/stagehand": "1.14.0",
     "@hono/node-server": "^1.13.8",
+    "@mendable/firecrawl-js": "^1.22.1",
     "@playwright/test": "^1.49.1",
     "ai": "^4.2.0",
     "any-date-parser": "^2.0.3",
