--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hono/node-server": "^1.13.8",
     "@mendable/firecrawl-js": "^1.22.1",
     "@playwright/test": "^1.49.1",
+    "@spider-cloud/spider-client": "^0.1.32",
     "ai": "^4.2.0",
     "any-date-parser": "^2.0.3",
     "boxen": "^8.0.1",
