--- a/package.json
+++ b/package.json
@@ -7,38 +7,39 @@
     "custom": "tsx main-2.ts",
     "postinstall": "playwright install",
     "serve": "tsx watch server.ts",
-    "eval:dev": "evalite watch --threshold=70"
+    "eval:dev": "evalite watch"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.2.5",
-    "@ai-sdk/openai": "^1.2.3",
-    "@ai-sdk/perplexity": "^1.1.0",
+    "@ai-sdk/google": "^1.2.11",
+    "@ai-sdk/openai": "^1.3.12",
+    "@ai-sdk/perplexity": "^1.1.7",
     "@browserbasehq/sdk": "2.3.0",
     "@browserbasehq/stagehand": "1.14.0",
-    "@hono/node-server": "^1.13.8",
-    "@mendable/firecrawl-js": "^1.22.1",
-    "@playwright/test": "^1.49.1",
+    "@hono/node-server": "^1.14.1",
+    "@mendable/firecrawl-js": "^1.23.9",
+    "@playwright/test": "^1.51.1",
     "@spider-cloud/spider-client": "^0.1.32",
-    "ai": "^4.2.0",
+    "ai": "^4.3.7",
     "any-date-parser": "^2.0.3",
     "boxen": "^8.0.1",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
-    "hono": "^4.7.5",
+    "hono": "^4.7.6",
     "js-tiktoken": "^1.0.19",
+    "openai@latest": "link:ai-sdk/openai@latest",
     "pg": "^8.14.1",
-    "puppeteer": "^24.4.0",
+    "puppeteer": "^24.6.1",
     "tiktoken": "^1.0.20",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.11",
+    "@types/pg": "^8.11.13",
     "autoevals": "^0.0.127",
     "evalite": "^0.10.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.0.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
     "vitest": "^2.1.9"
   }
 }
