--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "any-date-parser": "^2.0.3",
     "boxen": "^8.0.1",
     "chalk": "^5.4.1",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "hono": "^4.7.6",
     "js-tiktoken": "^1.0.19",
+    "openai": "^4.94.0",
     "openai@latest": "link:ai-sdk/openai@latest",
     "pg": "^8.14.1",
     "puppeteer": "^24.6.1",
     "tiktoken": "^1.0.20",
+    "turndown": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
