--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/pg": "^8.11.13",
     "autoevals": "^0.0.127",
     "evalite": "^0.10.0",
