--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,10 @@
 {
 	"compilerOptions": {
-		"target": "ES2022",
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
-		"outDir": "./dist",
-		"rootDir": "./",
-		"strict": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"allowImportingTsExtensions": false,
-		"noEmit": false
+		"module": "commonjs",
+		"noImplicitAny": true,
+		"removeComments": true,
+		"preserveConstEnums": true,
+		"sourceMap": true
 	},
 	"include": ["*.ts", "api", "examples/run.ts"],
 	"exclude": ["node_modules", "dist"]
