--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"hono": "^4.7.6",
 		"pg": "^8.14.1",
 		"puppeteer": "^24.6.1",
+		"turndown": "^7.2.0",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/pg": "^8.11.13",
+		"@types/turndown": "^5.0.5",
 		"autoevals": "^0.0.127",
 		"evalite": "^0.10.0",
 		"tsx": "^4.19.3",
