--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"noImplicitAny": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"esModuleInterop": true
 	},
 	"include": ["*.ts", "api", "examples/run.ts"],
 	"exclude": ["node_modules", "dist"]
